--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,7 +43,6 @@
     <string name="error_content_not_supported">This content is not supported.</string>
     <string name="error_generic">An error occurred.</string>
     <string name="error_network">A network error occurred.</string>
-    <string name="no_message">(no message)</string>
     <string name="unknown_time">--:--</string>
     <string name="queue">Queue</string>
     <string name="now_playing">Now Playing</string>
@@ -59,6 +58,10 @@
     <string name="queue_jump">Jump to current item</string>
     <string name="open_with">Open with</string>
     <string name="error_header">An error occurred.</string>
-    <string name="error_message">Error message:</string>
-    <string name="error_stack_trace">Stack trace:</string>
+    <string name="error_subheader">Errors:</string>
+    <string name="local">Local</string>
+    <string name="yt_music">YT Music</string>
+    <string name="spotify">Spotify</string>
+    <string name="youtube">YouTube</string>
+    <string name="soundcloud">SoundCloud</string>
 </resources>
