--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="skip_previous">Skip to Previous</string>
     <string name="unknown">Unknown</string>
     <string name="unknown_artist">Unknown artist</string>
+    <string name="album_info">Album (%d) · %s</string>
+    <string name="playlist_info">Playlist (%d) · %s</string>
     <string name="nav_home">Home</string>
     <string name="nav_library">Library</string>
     <string name="nav_history">History</string>
@@ -26,12 +28,12 @@
     <string name="artist">Artist</string>
     <string name="track">Track</string>
     <string name="album">Album</string>
-    <string name="playlist">Playlist</string>
     <string name="play_pause">Play and pause</string>
     <string name="navigation">Navigation</string>
     <string name="error_info_search">Could not run search query</string>
     <string name="error_info_art">Could not fetch art</string>
     <string name="error_info_stream">Could not fetch stream</string>
+    <string name="error_info_list">Could not fetch list items</string>
     <string name="error_unsupported_service">This platform is unsupported.</string>
     <string name="error_age_restricted_content">This content is age restricted and cannot be streamed.</string>
     <string name="error_georestricted_content">This content is not available in your country.</string>
