--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,4 +96,9 @@
     <string name="settings">Settings</string>
     <string name="pref_volume_anim_time_title">Fade in/out time</string>
     <string name="pref_volume_anim_time_summary">How long it takes for the volume to fade in and out, after pressing play or pause (0–1 second)</string>
+    <string name="pref_stream_quality_title">Stream quality</string>
+    <string-array name="pref_stream_quality_names">
+        <item>Highest quality</item>
+        <item>Lowest size</item>
+    </string-array>
 </resources>
